# avalanchego

.github/workflows/: publish_docker_image.yml  publish_ghcr_image.yml
api/server/: server.go
graft/subnet-evm/: TX_DENY_LIST.md
graft/subnet-evm/core/: BUILD.bazel  state_transition.go
graft/subnet-evm/core/txpool/: BUILD.bazel  validation.go
graft/subnet-evm/plugin/evm/vmerrors/: errors.go
graft/subnet-evm/precompile/contracts/txdenylist/: BUILD.bazel  config.go  config_test.go  contract.go  contract_test.go  module.go
graft/subnet-evm/precompile/registry/: BUILD.bazel  registry.go
graft/subnet-evm/scripts/: build_docker_image.sh
scripts/: build_image.sh  image_tag.sh
version/: constants.go
